Run some more tests

--- a/campagnes/c01/s01/T001.ipynb
+++ b/campagnes/c01/s01/T001.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b09da0dd",
    "metadata": {},
@@ -69,7 +68,7 @@
    "metadata": {},
    "source": [
     "### Résultat de la fonction GoF.rasch()\n",
-    "On voit que l'on obtent p-value < 0.05 ce qui nous indique que notre modèle n'est pas précis. \n",
+    "On voit que l'on obtient p-value < 0.05 ce qui nous indique que notre modèle n'est pas précis. \n",
     "On va donc voir si on peut affiner les résultats en triant les questions.\n",
     "On décide de ne garder que les questions où le taux de bonnes réponses est inférieur à 90%."
    ]
@@ -175,7 +174,7 @@
    "metadata": {},
    "source": [
     "# Résultats du test\n",
-    "On voit que l'on obtent p-value >> 0.05 ce qui nous indique que notre modèle est beaucoup plus précis. \n",
+    "On voit que l'on obtient p-value >> 0.05 ce qui nous indique que notre modèle est beaucoup plus précis. \n",
     "Cela confirme l'hypothèse que l'analyse du test est meilleure si l'on supprime les questions avec un fort taux de bonnes réponses.\n",
     "\n",
     "## HYPOTHESE INITIALE VALIDEE"
