--- a/R/scripts/notebook.Rmd
+++ b/R/scripts/notebook.Rmd
@@ -8,7 +8,7 @@ Try executing this chunk by clicking the *Run* button within the chunk or by pla
 
 ```{r}
 library(ltm)
-reponses <- read.csv2("../data/qcm.csv")
+reponses <- read.csv2("../data/qcm_2_4_5_6_7_8_11_12_13_14_15_16_17_19_20_22_23_24.csv")
 
 # Assessing the data
 dsc<-descript(reponses)
